--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mongoscraper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/shane-lennon/mongoscraper/issues"
   },
-  "homepage": "https://github.com/shane-lennon/mongoscraper#readme"
+  "homepage": "https://github.com/shane-lennon/mongoscraper#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
+    "mongoose": "^5.4.14",
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.0"
+  },
+  "devDependencies": {}
 }
